--- a/doc/src/Graphical_user_interface.tex
+++ b/doc/src/Graphical_user_interface.tex
@@ -1,40 +1,31 @@
 \section{Graphical User Interface}
 \label{GUI}
-
-In this chapter, we will present our graphical user interface. We will also discuss the steps required to run the program and visulize these with the help of screenshots.
+In this chapter, we will present our graphical user interface. We will also discuss the steps required to run the program and visualize these with the help of screenshots.
 
 \medskip
 
-This graphical user interface has been created using the Matlab built-in app developemnt framework App Designer. This framework provides user friendly standard components such as buttons, check boxes, trees, and drop-down lists, that made the usage of our program considerably intuitiv. 
+This graphical user interface has been created using the Matlab built-in app development framework App Designer. This framework provides user friendly standard components such as buttons, checkboxes, trees, and drop-down lists, that made the usage of our program considerably intuitive. 
 
 \subsection{Structural Design}
 
-While developing the graphical user interface (GUI) to meet the required  functions, we tried to keep the interface as simple and intuitiv as possible, in order not to overwhelm the user. 
+While developing the graphical user interface (GUI) to meet the required  functions, we tried to keep the interface as simple and intuitive as possible, in order not to overwhelm the user. 
 
 \medskip
 
-Therefore we splited the given specifications into 5 steps and 1 optional. The first being dedicated to selecting paths of the source, background and output directories. If these paths are not valid, an error message will be displayed to the user.
+Therefore we split the given specifications into 5 steps and 1 optional. The first being dedicated to selecting paths of the source, background and output directories. If these paths are not valid, an error message will be displayed to the user.
 
 \medskip
 
-The second step is allocated to selecting the configuration parameters variables Left, Right, Start and N. These variable are also subject to a control routine, which verifies their validity.
-  
+The second step is allocated to selecting the configuration parameters variables Left, Right, Start and N. These variables are also subject to a control routine, which verifies their validity.
+
 \medskip
 
 Before running the program, the user should select a rendering mode in the third step. The user has a toggle button group containing all 4 possible rendering modes. The use of this toggle box will prevent the user from selecting multiple modes at once. 
 
 \subsection{Interaction Design}
 
-After running the program, the stereo input image stream will be displayed on the left side of the console whereas the rendered output stream will be dispalyed on the right side. To let the user control these streams and be able to play it, pause it or repeat it on looop, a playback control has been developed.
+After running the program, the stereo input image stream will be displayed on the left side of the console whereas the rendered output stream will be displayed on the right side. To let the user control these streams and be able to play it, pause it or repeat it on loop, a playback control has been developed.
 
 \medskip
 
-As an additional feature, a video with the virtual background will be played in an extra window with the help of the Matlab built-in video player. 
-
-
-
-
-
-
-
-
+As an additional feature, a video with a virtual background will be played in an extra window with the help of the Matlab built-in video player. 
